--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
 		"dev:server": "nodemon --watch src/server --exec \"npx tsc -p tsconfig.node.json && node dist/server/index.js\""
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.3",
 		"@stylistic/eslint-plugin": "^5.5.0",
+		"@tailwindcss/vite": "^4.1.16",
 		"axios": "1.7.7",
 		"body-parser": "1.20.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"concurrently": "9.0.1",
 		"express": "4.21.0",
+		"lucide-react": "^0.552.0",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.16"
 	},
 	"devDependencies": {
 		"@eslint/js": "9.9.0",
@@ -39,6 +46,7 @@
 		"globals": "15.9.0",
 		"jsdom": "25.0.1",
 		"nodemon": "3.1.7",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "5.6.2",
 		"typescript-eslint": "8.0.1",
 		"vite": "5.4.1",
