--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"test": "vitest",
-		"lint": "eslint .",
+		"lint": "eslint . --fix",
 		"preview": "vite preview",
 		"start": "concurrently \"npm run dev\" \"npm run dev:server\"",
 		"dev:server": "nodemon --watch src/server --exec \"npx tsc -p tsconfig.node.json && node dist/server/index.js\""
